# coraline

./: .gitmodules  CMakeLists.txt  README.md
coraline/: CMakeLists.txt  Configuration.cpp  coraline.pc.in  corview_fileutil.cpp  main.c  plugins_setup.cpp
coraline/builtin/: NativeBridge.cpp  SplashScreen.cpp  StatusBar.cpp  TestPlugin.cpp
coraline/plugin/: Context.cpp  Dispatcher.cpp  Plugin.cpp  PluginBase.cpp  Registry.cpp
coraline/webview/: coraline.c  webview_callback.cpp  window_utils.cpp
include/: Coraline.h
include/coraline/: Configuration.h  coralineDirs.h.in  coralineLocations.h  corviewConfig.h  corviewDebug.h  corviewDefs.h  corviewTypes.h
include/coraline/builtin/: NativeBridge.h  SplashScreen.h  StatusBar.h  TestPlugin.h
include/coraline/extlib/: sha512.h  system.h
include/coraline/plugins/: Context.h  Plugin.h  PluginBase.h  dynPlugin.h  pluginDev.h
include/coraline/webview/: Dispatcher.h  Registry.h  coraline.h  corview_fileutil.h  corview_fileutil.hpp  corview_plugins.h  webview.h  webview_callback.h  window_utils.h
plugins/: CMakeLists.txt
shared/: CMakeLists.txt
shared/plugin-resources/: README.txt
shared/plugin-resources/InAppBrowser/: init.js
shared/plugin-resources/Notification/: init.js
shared/plugin-resources/StatusBar/: init.js
shared/plugins/: README.txt
shared/shortcuts/: coraline.desktop
